# pita-supply-os

./: .gitignore  10xdevs.md  AGENTS.md
.claude/skills/10x-autonomous-workflow/: SKILL.md
.github/workflows/: ci.yml
context/archive/2026-06-05-bukat-master-data-ready/: audit.md  change.md
context/archive/2026-06-05-captain-bukat-submit/: change.md
context/archive/2026-06-05-inventory-count/: change.md  plan.md
context/archive/2026-06-05-subkg-rounding-rule/: change.md  plan.md  research.md
context/archive/2026-06-06-manager-bukat-email-dispatch/: change.md  plan-brief.md  smoke-log.md
context/archive/2026-06-07-dispatch-email-content/: change.md
context/archive/2026-06-07-frontend-lint-debt/: change.md  plan.md
context/archive/2026-06-07-inventory-category-sections/: change.md
context/archive/2026-06-07-manager-queue-filters/: change.md  plan-brief.md  plan.md  research.md
context/archive/2026-06-08-inventory-count-followups/: change.md  phase2-inventory.html  phase5-tabs.html  research.md
context/archive/2026-06-08-order-prefill-from-inventory/: change.md
context/archive/2026-06-08-screens-design-audit/: change.md  plan.md  research.md
context/archive/2026-06-09-bukat-suggestion-learning-loop/: change.md
context/archive/2026-06-09-gr-01/: change.md  plan.md  research.md
context/archive/2026-06-09-inventory-manager-view/: change.md  plan.md
context/archive/2026-06-09-multi-supplier-master-data/: audit.md  change.md  par-level-gaps.csv  par-level-gaps.md
context/archive/2026-06-10-deploy-pipeline-repair/: change.md  frame.md  research.md
context/archive/2026-06-16-manager-queue-ux/: change.md  plan.md
context/archive/2026-06-16-order-screen-ux-fixes/: change.md  plan-brief.md
context/archive/2026-06-16-supabase-backend/: change.md  frame.md  plan.md
context/archive/2026-06-16-wz-photos-supabase-storage/: change.md  plan-brief.md  plan.md
context/archive/2026-06-17-api-error-localization-pl/: change.md  plan.md
context/archive/2026-06-17-order-cancel-with-trace/: change.md  plan.md
context/archive/2026-06-17-order-lines-targeted-load/: change.md
context/archive/2026-06-17-order-stock-optional-overmax/: change.md  plan.md
context/archive/2026-06-17-supabase-edit-atomic/: change.md
context/archive/2026-06-23-demo-blocker-decimals-save/: change.md  plan-brief.md  plan.md
context/archive/2026-06-23-email-total-to-manager-panel/: change.md  research.md
context/archive/2026-06-23-h-01-quality-hardening/: change.md  plan-brief.md  plan.md
context/archive/2026-06-23-order-qty-display/: change.md
context/archive/2026-06-23-receiving-received-headline/: change.md  research.md
context/archive/2026-06-23-ux-quick-wins-r1/: change.md  plan-brief.md  plan.md
context/archive/2026-06-24-manager-receiving-view/: change.md  plan-brief.md  plan.md
context/archive/2026-06-24-order-ordered-by/: change.md  plan-brief.md
context/archive/2026-06-25-email-delivery-address/: change.md  plan.md
context/archive/2026-06-26-email-delivery-time/: change.md
context/changes/add-product-to-order/: change.md  plan-brief.md  plan.md
context/changes/api-error-localization-pl/: change.md  plan.md
context/changes/bukat-master-data-ready/: change.md
context/changes/bukat-suggestion-learning-loop/: change.md  plan.md
context/changes/captain-bukat-submit/: change.md  plan-brief.md  plan.md  research.md
context/changes/demo-blocker-decimals-save/: change.md  plan.md
context/foundation/: health-check.md  infrastructure.md  lessons.md  prd.md  roadmap.md  shape-notes-critique-2026-06-03.md  shape-notes.md  stack-assessment.md
context/reviews/: impl-review-2026-06-09.md
docs/: tooling.md
docs/pita-supply-os-v1/: ADR-001-hybrid-hosting.md  BRIEF.md  BUILD_PLAN.md  CATEGORIES_AND_UNITS.md  CRITIC_REVIEW_2026-06-02.md  DATA_MODEL.md  DEMO_FEEDBACK.md  DESIGN_HANDOFF.md  DROPLET_DEPLOY_RUNBOOK.md  FINISH_PLAN_2026-05-23.md  GCP_SERVICE_ACCOUNT_SETUP.md  MANAGER_DASHBOARD_SPEC.md  MANAGER_V2_SPEC.md  MIN_MAX_ANALYSIS.md  PREMIUM_SERVICES_FIT.md  PRE_DEPLOY_REVIEW.md  PRODUCT_UNITS_AUDIT.md  RAILWAY_DEPLOY_RUNBOOK.md  README.md  RESUME_STATE_2026-06-02.md  ROADMAP.md  SHEETS_SCHEMA.md  TESTERARMY_APP_BRIEF.md  TESTERARMY_RESEARCH_RECOVERED.md  TESTING_AUTOMATION_PLAN.md  WOLA_CAPTAIN_BRIEFING.md
frontend/: .env.example  AGENTS.md  package-lock.json  package.json  vercel.json  vite.config.ts
frontend/design-proto/: manager-queue.html  order-line-table.html  product-card.html
frontend/src/: App.tsx  AuthGate.tsx  ErrorBoundary.tsx  apiClient.test.ts  apiClient.ts  auth.test.ts  auth.ts  index.css  types.ts
supply-os-v1/: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml  railway.toml  requirements-dev.txt  requirements.txt
supply-os-v1/app/: __init__.py  auth.py  config.py  drive.py  errors.py  gmail_url.py  main.py  models.py  seed_loader.py  sheets.py  suggestion.py  supabase_backend.py  supabase_storage.py
supply-os-v1/migrations/: 0001_initial_schema.sql  0002_rls_deny_all.sql  0003_widen_delta_vs_suggestion_pct.sql  0004_add_order_cancel_trace.sql  0005_add_ordered_by.sql  0006_add_supplier_product_order_note.sql
supply-os-v1/scripts/: backfill_supabase.py  diag_orderable.py  reverse_sync_supabase.py  smoke_railway.sh  sync_master_data.py  verify_parity.py
supply-os-v1/tests/: conftest.py  test_captain_orders.py  test_captain_submit.py  test_config_creds.py  test_drive.py  test_gmail_url.py  test_inventory_counts.py  test_inventory_latest.py  test_inventory_manager.py  test_inventory_sheets.py  test_inventory_submit.py  test_main.py  test_manager_add_line.py  test_manager_claim_release.py  test_manager_dispatch.py  test_manager_queue.py  test_manager_receiving.py  test_manager_save.py  test_orderable_order_note.py  test_receipt_detail.py  test_receipt_photos.py  test_receipt_sheets.py  test_receipt_submit.py  test_seed_loader.py  test_sheets_read.py  test_sheets_write.py  test_suggestion.py  test_suggestion_review.py  test_supabase_backend.py  test_supabase_integration.py  test_supabase_storage.py
(+219 files in other folders)
