[project]
name = "pita-supply-os"
version = "0.1.0"
description = "Pita Bros Supply OS v0 — Captain Submit + Manager Dispatch backend"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "python-dotenv>=1.0",
  "gspread>=6.0",
  "google-auth>=2.28",
  "python-multipart>=0.0.9",
  "posthog>=3.5",
  "supabase>=2.10,<3",
  # S-10 Supabase Postgres data backend — sync driver + SQLAlchemy Core query/pool layer.
  "psycopg2-binary>=2.9",
  "SQLAlchemy>=2.0,<3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-mock>=3.0",
  "ruff>=0.4",
  "httpx>=0.27",
  # Lock compiler. Pinned exactly into requirements-dev.txt so the CI
  # lockfile-drift job recompiles with the same resolver — see root AGENTS.md
  # for the regen procedure (H-01 quality-hardening).
  "pip-tools>=7.4,<8",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
# `integration` tests hit a REAL Postgres (the Supabase backend) and are EXCLUDED
# from the default run via addopts; opt in with `pytest -m integration` (they need
# SUPPLY_OS_DATA_BACKEND=supabase + SUPPLY_OS_DATABASE_URL and skip otherwise). A
# CLI `-m integration` overrides the addopts marker expression (last `-m` wins).
markers = [
  "integration: exercises a real Postgres via the Supabase backend (excluded by default; run with -m integration)",
]
addopts = "-m 'not integration'"
