[project]
name = "pita-supply-os"
version = "0.1.0"
description = "Pita Bros Supply OS v0 — Captain Submit + Manager Dispatch backend"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "python-dotenv>=1.0",
  "gspread>=6.0",
  "google-auth>=2.28",
  "python-multipart>=0.0.9",
  "posthog>=3.5",
  "supabase>=2.10,<3",
  # S-10 Supabase Postgres data backend — sync driver + SQLAlchemy Core query/pool layer.
  "psycopg2-binary>=2.9",
  "SQLAlchemy>=2.0,<3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-mock>=3.0",
  "ruff>=0.4",
  "httpx>=0.27",
  # Lock compiler. Pinned exactly into requirements-dev.txt so the CI
  # lockfile-drift job recompiles with the same resolver — see root AGENTS.md
  # for the regen procedure (H-01 quality-hardening).
  "pip-tools>=7.4,<8",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
# Curated uplift over ruff's default ruleset (E4/E7/E9 + F). Every family below
# passes `ruff check .` clean TODAY with zero product-code edits; codes that would
# require code edits or are language/framework noise are turned off via `ignore`
# (config-only grandfathering — no `# noqa` was added to any source file).
# Families whose only remedy is editing product code (UP pyupgrade, RUF mixed,
# PT pytest-style, I isort, PTH pathlib) are deferred to H-01 Phase 4, which runs
# after the in-flight demo-blocker change merges to main.
select = [
  "E",    # pycodestyle errors
  "F",    # pyflakes (ruff default)
  "W",    # pycodestyle warnings
  "B",    # flake8-bugbear — real bug catchers (mutable defaults, loop var binding, …)
  "C4",   # flake8-comprehensions
  "SIM",  # flake8-simplify
  "RET",  # flake8-return
  "PIE",  # flake8-pie
  "ISC",  # flake8-implicit-str-concat
  "TID",  # flake8-tidy-imports
  "G",    # flake8-logging-format
]
ignore = [
  # Line length is the formatter's job — enforce via `ruff format` in Phase 4,
  # not E501 (39 pre-existing long lines today).
  "E501",
  # FastAPI's `Depends(...)` default-argument idiom — pervasive and intentional.
  "B008",
  # raise-without-`from` inside except: 19 pre-existing; add `from`/`from None`
  # in Phase 4 (product-code edits, out of scope for this config-only change).
  "B904",
  # unnecessary dict()/list() call (7) — autofix edits product code → Phase 4.
  "C408",
  # dict-comprehension-for-iterable (8) — autofix edits product code → Phase 4.
  "C420",
  # unnecessary `return None` (1) — autofix edits product code → Phase 4.
  "RET501",
  # unnecessary range() start arg (1) — autofix edits product code → Phase 4.
  "PIE808",
  # ISC001 (single-line implicit string concat) conflicts with `ruff format`;
  # keep it off now so enabling the formatter in Phase 4 needs no config surgery
  # (ISC002/ISC003 stay active and pass clean today).
  "ISC001",
]

[tool.pytest.ini_options]
# `integration` tests hit a REAL Postgres (the Supabase backend) and are EXCLUDED
# from the default run via addopts; opt in with `pytest -m integration` (they need
# SUPPLY_OS_DATA_BACKEND=supabase + SUPPLY_OS_DATABASE_URL and skip otherwise). A
# CLI `-m integration` overrides the addopts marker expression (last `-m` wins).
markers = [
  "integration: exercises a real Postgres via the Supabase backend (excluded by default; run with -m integration)",
]
addopts = "-m 'not integration'"
